<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_account"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/id_background"
            android:maxLength="1"
            android:maxLines="1"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="titleButton"
            android:paddingHorizontal="20dp"
            android:text="@string/account_id"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_main"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_main"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:autoSizeTextType="none"
            android:background="@drawable/chip_background"
            android:clickable="true"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="titleButton"
            android:paddingHorizontal="20dp"
            android:text="@string/all"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_account"
            app:layout_constraintEnd_toStartOf="@+id/btn_music"
            app:layout_constraintStart_toEndOf="@+id/btn_account"
            app:layout_constraintTop_toTopOf="@+id/btn_account" />

        <Button
            android:id="@+id/btn_music"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/chip_background"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="titleButton"
            android:paddingHorizontal="20dp"
            android:text="@string/music"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_main"
            app:layout_constraintEnd_toStartOf="@+id/btn_podcast"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_main"
            app:layout_constraintTop_toTopOf="@+id/btn_main" />

        <Button
            android:id="@+id/btn_podcast"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/chip_background"
            android:backgroundTint="#4C4C4C"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="titleButton"
            android:paddingHorizontal="20dp"
            android:text="@string/podcast"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_music"
            app:layout_constraintEnd_toStartOf="@+id/btn_event"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_music"
            app:layout_constraintTop_toTopOf="@+id/btn_music" />

        <Button
            android:id="@+id/btn_event"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/chip_background"
            android:backgroundTint="#4C4C4C"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="titleButton"
            android:paddingHorizontal="20dp"
            android:text="@string/event_name"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_podcast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_podcast"
            app:layout_constraintTop_toTopOf="@+id/btn_podcast" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/outer_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_playlists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        tools:itemCount="8">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_mix_n_recommend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="10">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_mix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="10" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_my_musics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="5" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="9dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="10" >

        </androidx.recyclerview.widget.RecyclerView>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_mix_n_radios"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="9dp">

        </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>